force-app/main/default/objects/Category__c/fields/Spending__c.field-meta.xml
<CustomField>
    <fullName>Spending__c</fullName>
    <label>Spending</label>
    <referenceTo>Spending__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>