force-app/main/default/objects/Category__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>